<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aktywnosc">
    
    <LinearLayout
        android:id="@+id/activitybuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/aktywnosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/Atkywnosc"
            android:textSize="25sp"
            android:textColor="#000"/>


            <Button
                android:id="@+id/buttonact1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/siedzaca"
                android:textColor="#fafafa"
                android:padding="10dp"
                android:background="@drawable/btn_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siedzacy1"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_marginTop="5dp"/>


        <Button
            android:id="@+id/buttonact2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_color"
            android:textColor="#fafafa"
            android:text="@string/dosc_aktywny"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uwzgl_dniaj_c_spacery_i_wiczenia_1_2_w_tygodniu"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="#000"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/bottonact3"
    android:layout_marginTop="20dp"
    android:text="Umiarkowanie aktywny"
    android:background="@drawable/btn_color"
    android:padding="10dp"
    android:textColor="#fafafa"
    tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiczenia_2_3_razy_w_tygodniu"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            />
<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:id="@+id/buttonact4"
    android:layout_marginTop="20dp"
    android:text="@string/aktywny"
    android:background="@drawable/btn_color"
    android:textColor="#fafafa"
    />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ostre_wiczenia_ponad_3_razy_w_tygodniu"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#000"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonact5"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_color"
            android:textColor="#fafafa"
            android:text="@string/bardzo_aktywny"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codzienne_ostre_wiczenia"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textColor="#000"/>
    </LinearLayout>

</ScrollView>