<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".obliczenie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="50dp">
    <TextView
        android:id="@+id/wiek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wiek"
        android:textSize="20sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/textwiek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/wiek"
        android:autofillHints=""
        android:ems="10"
        android:background="@drawable/kontur_color"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:inputType="numberSigned" />
</LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/plec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Plec"
        android:textSize="20sp"
        android:textColor="#000"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:checked="true"
            android:labelFor="@id/plec"
            android:text="@string/Male"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:labelFor="@id/plec"
            android:text="@string/Female"
            android:textSize="15sp" />


    </RadioGroup>

</LinearLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/waga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Waga"
        android:textSize="20sp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/textwags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/licbawaga"
        android:inputType="numberDecimal"
        android:labelFor="@id/waga"
        android:layout_marginLeft="5dp"
        android:background="@drawable/kontur_color"
        android:padding="5dp"/>

</LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/wzrost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wzrost"
                android:textSize="20sp"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/textwzrost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/liczbawzrost"
               android:layout_marginLeft="5dp"
                android:background="@drawable/kontur_color"
                android:padding="5dp"
                android:inputType="number"
                android:labelFor="@id/wzrost" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:layout_gravity="center">

            <Button
                android:id="@+id/oblicz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Oblicz"
                android:background="@drawable/btn_color"
                android:textColor="#fafafa"
                android:onClick="ObliczBMI"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>