<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp"
            tools:context=".CelActivity">

        <TextView
                android:id="@+id/cel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wybierzcel"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/docelowawaga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wpiszswojawage"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="16sp" />

        <EditText
                android:id="@+id/textwaga"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:background="@drawable/kontur_color"
                android:ems="10"
                android:hint="@string/licbawaga"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textAlignment="center" />

        <Button
                android:id="@+id/utrata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector_deselectable"
                android:text="@string/Utrata"
                android:textColor="#fafafa" />

        <Button
                android:id="@+id/zachowanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector_deselectable"
                android:text="@string/ZachowanieMasy"
                android:textColor="#fafafa" />

        <Button
                android:id="@+id/nabor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector_deselectable"
                android:text="@string/NaborMasy"
                android:textColor="#fafafa" />

        <Button
                android:id="@+id/kontynuuj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_button_blue_selector"
                android:padding="16dp"
                android:text="@string/kontynnuj"
                android:textColor="#fafafa" />

    </LinearLayout>

</ScrollView>