<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WyborPosilkuActivity">

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

        <LinearLayout
                android:id="@+id/buttonsiadanie"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@drawable/rounded_button_selector"
                android:gravity="center"
                android:onClick="otworzPosilek"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sniadanie"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_35"
                    android:textColor="#fafafa"
                    android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
                android:id="@+id/przekaska1button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector"
                android:gravity="center"
                android:onClick="otworzPosilek"
                android:orientation="vertical"
                android:textColor="#fafafa"
                android:textSize="25sp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Przekaska1"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_15"
                    android:textColor="#fafafa"
                    android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/buttonobiad"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector"
                android:gravity="center"
                android:onClick="otworzPosilek"
                android:orientation="vertical"
                android:textColor="#fafafa"
                android:textSize="25sp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Obiad"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_30"
                    android:textColor="#fafafa"
                    android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/buttonprzekaska2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector"
                android:gravity="center"
                android:onClick="otworzPosilek"
                android:orientation="vertical"
                android:textColor="#fafafa"
                android:textSize="25sp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Przekaska2"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_10"
                    android:textColor="#fafafa"
                    android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/buttonkolacja"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_button_selector"
                android:gravity="center"
                android:onClick="otworzPosilek"
                android:orientation="vertical"
                android:text="@string/Kolacja"
                android:textColor="#fafafa"
                android:textSize="25sp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kolacja"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_10"
                    android:textColor="#fafafa"
                    android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/procentowy_udzia_kalorii_w_ciagu_dnia"
                    android:textColor="#000" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>